fix(portal-theme): fix padding on mobile

--- a/src/Themes/PortalTheme/Assets/scss/_section-panel.scss
+++ b/src/Themes/PortalTheme/Assets/scss/_section-panel.scss
@@ -9,9 +9,9 @@
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
-  padding: 2rem 1rem;
+  padding: 2rem 0;
   @include media-breakpoint-up(md) {
-    padding: 2rem;
+    padding: 2rem 2rem;
   }
 
   .is-vertical-list {
